# MLEngineering_Capstone_Group3

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-exp  Dockerfile-facereco  Dockerfile-mmauth  Dockerfile-stt  README.md  pyproject.toml
blank-to-bard-frontend/: package-lock.json  package.json
blank-to-bard-frontend - Copy/: Dockerfile  package-lock.json  package.json
blank-to-bard-frontend - Copy/src/: App.css  App.js
blank-to-bard-frontend/src/: App.css  App.js
data/raw/: english-dataset.csv
notebooks/: api_testing.ipynb  dataset_generation.ipynb  face_reco_model.ipynb  image_dataset_gen.ipynb  model_training.ipynb  pipeline.ipynb  reco_model.ipynb
src/blank-to-bard/: stt.py
src/blank_to_bard/: binary_classifier_predictor.py  classifier_app.py  explainability_app.py  face_reco_app.py  face_reco_predictor.py  face_reco_service.py  llm_explainability_prompt.py  middleman_auth.py  model_to_gcp.py  stt_openai_api.py  test_api.py
