[tool.poetry]
name = "blank-to-bard"
version = "0.1.0"
description = ""
authors = ["Dean <deanvanaswegen.dva@gmail.com>",
            "Luka <luka.vuksanovic35@gmail.com>",
            "Louis <louis.sanna@gmail.com>",
            "Charles <fzy1995@gmail.com>"]
readme = "README.md"
packages = [{include = "blank-to-bard", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
