[tool.poetry]
name = "blank-to-bard"
version = "0.1.0"
description = ""
authors = ["Dean <deanvanaswegen.dva@gmail.com>",
            "Luka <luka.vuksanovic35@gmail.com>",
            "Louis <louis.sanna@gmail.com>",
            "Charles <fzy1995@gmail.com>"]
readme = "README.md"
packages = [{include = "blank_to_bard", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.100.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.23.0"
sympy = "^1.12"
python-multipart = "^0.0.6"
google-cloud-aiplatform = "^1.28.0"
pandas = "^2.0.3"
tensorflow-io-gcs-filesystem = "0.30.0"
transformers = "^4.30.2" 
tensorflow = "^2.13.0"
docker = "^6.1.3"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
